# xiamocon

./: .gitignore  .gitmodules  LICENSE  README.md  ShapoSansMono__s08c07_8h_source.html  ShapoSansP__s08c07_8h_source.html  ShapoSansP__s12c09a01w02_8h_source.html  ShapoSansP__s21c16a01w03_8h_source.html  annotated.html  annotated_dup.js  ap__fixed_8hpp_source.html  app_8h.html  app_8h.js  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  app_8hpp_source.html  app__entry_8h_source.html  app__entry_8hpp_source.html  attribute__buffer_8hpp_source.html  audio_8hpp_source.html  audio__common_8h.html  audio__common_8h.js  audio__common_8h__dep__incl.map  audio__common_8h__dep__incl.md5  audio__common_8h__incl.map  audio__common_8h__incl.md5  audio__common_8h_source.html  audio__common_8hpp_source.html  battery_8h_source.html  battery_8hpp.html  battery_8hpp__dep__incl.map  battery_8hpp__dep__incl.md5  battery_8hpp__incl.map  battery_8hpp__incl.md5  battery_8hpp_source.html  classes.html  classxmc_1_1AttributeBufferClass-members.html  classxmc_1_1AttributeBufferClass.html  classxmc_1_1EnvironmentMapShader-members.html  (+823 more)
cpp/: CMakeLists.txt  Doxyfile  xmc_sdk_import.cmake
cpp/example/: build_all.sh  clean_all.sh  init_all.sh
cpp/example/adc_demo/: CMakeLists.txt
cpp/example/adc_demo/src/: app.cpp
cpp/example/breakout/: CMakeLists.txt
cpp/example/breakout/src/: app.cpp
cpp/example/filer/: CMakeLists.txt  convert_images.sh
cpp/example/filer/include/: icon16_file.hpp  icon16_folder.hpp
cpp/example/filer/src/: app.cpp
cpp/example/flash_demo/: CMakeLists.txt  platformio.ini
cpp/example/flash_demo/src/: app.cpp
cpp/example/gfx2d_demo/: CMakeLists.txt
cpp/example/gfx2d_demo/src/: app.cpp
cpp/example/gfx_demo/: CMakeLists.txt  Makefile  gltf2cpp.sh  platformio.ini
cpp/example/gfx_demo/include/: cave_env_texture.hpp  cave_hole.hpp  cave_light.hpp  cubes.hpp  flame.hpp  grass.hpp  particles.hpp  quarts.hpp  tulip.hpp
cpp/example/gfx_demo/src/: app.cpp  cubes.cpp  flame.cpp  grass.cpp  particles.cpp
cpp/example/hello_world/: CMakeLists.txt
cpp/example/hello_world/src/: app.cpp
cpp/example/hwtest/: CMakeLists.txt
cpp/example/hwtest/src/: app.cpp
cpp/example/imu_demo/: CMakeLists.txt  Makefile  convert_materials.sh
cpp/example/imu_demo/include/: bmp_earth_cloud.hpp  bmp_earth_surface.hpp  earth_cloud.hpp  earth_surface.hpp  lsm6dsv16x.hpp  r_gray1.hpp
cpp/example/imu_demo/src/: app.cpp
cpp/example/ocarina/: CMakeLists.txt  Makefile
cpp/example/ocarina/src/: app.cpp
cpp/example/pwm_demo/: CMakeLists.txt
cpp/example/pwm_demo/src/: app.cpp
cpp/example/shapo_jump/: CMakeLists.txt  Makefile  convert_materials.sh
cpp/example/shapo_jump/include/: bmp_back_data.h  bmp_bg.hpp  bmp_chara.hpp  bmp_chara_data.h  bmp_miku_data.h  bmp_shapo.hpp  bmp_shapo_data.h
cpp/example/shapo_jump/src/: app.cpp
cpp/platform/common/include/xmc/hw/: power.h
cpp/platform/decl/: library.json
cpp/platform/decl/include/xmc/: adc.hpp  app_entry.hpp  audio_common.h  dma.hpp  flash.hpp  gpio.hpp  heap.hpp  hw_common.hpp  i2c.hpp  multicore.hpp  pins.hpp  power.hpp  pwm.hpp  semaphore.hpp  spi.hpp  spinlock.hpp  timer.hpp  xmc_common.h  xmc_common.hpp  xmc_status.h
cpp/platform/decl/include/xmc/hw/: dma.h  gpio.hpp  i2c.hpp  pwm.h  ram.h  ram.hpp  sdac.h  streaming_dac.hpp
cpp/platform/decl/src/: xmc_status.c
cpp/platform/impl/esp32s3_pio_arduino/: library.json
cpp/platform/impl/esp32s3_pio_arduino/include/: ESP32DMASPIMaster.h
cpp/platform/impl/esp32s3_pio_arduino/src/: adc.cpp  flash.cpp  gpio.cpp  i2c.cpp  main.cpp  multicore.cpp  pins.cpp  power.cpp  pwm.cpp  ram.cpp  smaphore.cpp  spi.cpp  spinlock.cpp  streaming_dac.cpp  timer.cpp  xmc_common.cpp
cpp/platform/impl/rp2350_pico_sdk/: CMakeLists.txt
cpp/platform/impl/rp2350_pico_sdk/include/xmc/: dma_irq.hpp
cpp/platform/impl/rp2350_pico_sdk/include/xmc/hw/: dma_irq.h
cpp/platform/impl/rp2350_pico_sdk/src/: adc.cpp  dma_irq.c  dma_irq.cpp  flash.cpp  gpio.cpp  heap.cpp  i2c.c  i2c.cpp  main.c  main.cpp  multicore.cpp  pins.cpp  power.cpp  pwm.c  pwm.cpp  ram.cpp  sdac.c  smaphore.cpp  spi.c  spi.cpp  spinlock.cpp  streaming_dac.cpp  timer.cpp  xmc_common.cpp
docker/: Dockerfile  build_image.sh  entrypoint.sh
docsrc/: Makefile  conf.py  index.rst  troubleshoot.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+83 more)
(+102 files in other folders)
